test/corpus/definitions/enum.txt
====================
Enum Definition
====================

Enum status {
    pending
    success
    failed
    postponed
}

---

(source_file
    (enum_definition
        (identifier)
        (enum_block
            (text)
            (text)
            (text)
            (text))))
