test/corpus/definitions/table_group.txt
====================
Table Group Definition
====================

TableGroup access_control {
    users
    roles
    permissions
    user_has_roles
    role_has_permissions
}

---

(source_file
    (table_group_definition
        (identifier)
        (table_group_block
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (identifier))))
